--- a/vignettes/categorical_features.Rmd
+++ b/vignettes/categorical_features.Rmd
@@ -1,18 +1,20 @@
 ---
 title: "Visualization of categorical features"
+date: "Last compiled: `r format(Sys.time(), '%d %B %Y')`"
 format: html
 editor: visual
 editor_options: 
   chunk_output_type: inline
 ---
 
-In this tutorial, we'll look at basic usage of the `MapLabels` function for plotting features that represent discrete groups of spots. This could for example be manually selected spots or clusters. Such features as stored in the `meta.data` slot of our `Seurat` object and can be represented as either 'character' vectors of 'factors'.
+In this tutorial, we'll look at basic usage of the `MapLabels()` function for plotting features that represent discrete groups of spots. This could for example be manually selected spots or clusters. Such features as stored in the `meta.data` slot of our `Seurat` object and can be represented as either 'character' vectors of 'factors'.
 
 ```{r message=FALSE, warning=FALSE}
+library(STUtility2)
+
 library(tibble)
 library(ggplot2)
 library(patchwork)
-library(STUtility2)
 ```
 
 ## Load data
@@ -34,7 +36,7 @@ se <- MergeSTData(se_mbrain, se_mcolon)
 
 ## Map categorical features
 
-For categorical data, we use `MapLabels` instead of `MapFeatures`. This function allows us to color our spots based on some column of our Seurat object containing categorical data.
+For categorical data, we use `MapLabels()` instead of `MapFeatures()`. This function allows us to color our spots based on some column of our Seurat object containing categorical data.
 
 ```{r fig.asp=1.3}
 # Here we use the & operator from the patchwork R package to add a theme
@@ -64,16 +66,30 @@ MapLabels(se, column_name = "seurat_clusters", ncol = 1) &
   theme(legend.position = "right")
 ```
 
+We can also use the function `MapLabelsSummary()` if want to add a stacked bar plot next to the spatial plot, summarizing the percentage of spots for each cluster in the section. If you would rather view the actual spot count you can pass `bar_display = "count"` instead.
+
+```{r fig.asp=0.8}
+MapLabelsSummary(se, 
+                 column_name = "seurat_clusters", 
+                 ncol = 1, 
+                 section_number = 1) &
+  theme(legend.position = "none")
+```
+
 ## Overlay maps on images
 
 And just as with `MapFeatures`, we can add our H&E images to the plots. Before we do this, we just need to load the H&E images into our `Seurat` object first with `LoadImages`.
 
 ```{r fig.asp=0.4}
 se <- LoadImages(se, verbose = FALSE)
-MapLabels(se, column_name = "seurat_clusters", image_use = "raw", 
+
+MapLabels(se, 
+          column_name = "seurat_clusters", 
+          image_use = "raw", 
           override_plot_dims = TRUE) +
   plot_layout(guides = "collect") &
-  guides(fill = guide_legend(override.aes = list(size = 3), ncol = 2)) &
+  guides(fill = guide_legend(override.aes = list(size = 3), 
+                             ncol = 2)) &
   theme(legend.position = "right")
 ```
 
@@ -84,8 +100,10 @@ We can crop the images manually by defining a `crop_area`. The `crop_area` shoul
 In order to decide how this rectangle should be defined, you can get some help by adding a grid to the plot:
 
 ```{r fig.asp=0.5}
-p <- MapLabels(se, column_name = "seurat_clusters", 
-               image_use = "raw", pt_alpha = 0.5) &
+p <- MapLabels(se, 
+               column_name = "seurat_clusters", 
+               image_use = "raw", 
+               pt_alpha = 0.5) &
   theme(panel.grid.major = element_line(linetype = "dashed"), axis.text = element_text())
 p
 ```
@@ -93,9 +111,12 @@ p
 Now if we want to crop out the GALT tissue in the mouse colon sample we can cut the image at left=0.45, bottom=0.55, right=0.65, top=0.7:
 
 ```{r fig.asp=0.8}
-p <- MapLabels(se, column_name = "selection", image_use = "raw", 
-                 pt_size = 5, section_number = 2, 
-                 crop_area = c(0.45, 0.55, 0.65, 0.7))
+p <- MapLabels(se, 
+               column_name = "selection", 
+               image_use = "raw", 
+               pt_size = 5, 
+               section_number = 2, 
+               crop_area = c(0.45, 0.55, 0.65, 0.7))
 p
 ```
 
@@ -104,14 +125,47 @@ And we can patch together a nice figure showing the whole tissue and the zoom in
 ```{r fig.asp=1.2}
 # override_plot_dims=TRUE can be used to crop the image to only
 # include the region that contain spots (see 'advanced' tutorial)
-p_global <- MapLabels(se, column_name = "selection", image_use = "raw",
-                        pt_size = 1, section_number = 2, override_plot_dims = TRUE)
-p_GALT <- MapLabels(se, column_name = "selection", 
-                      image_use = "raw",  pt_size = 5, section_number = 2, 
-                      crop_area = c(0.45, 0.55, 0.65, 0.7)) &
+p_global <- MapLabels(se, 
+                      column_name = "selection", 
+                      image_use = "raw",
+                      pt_size = 1, 
+                      section_number = 2, 
+                      override_plot_dims = TRUE) &
+  guides(fill = guide_legend(override.aes = list(size = 3)))
+
+p_GALT <- MapLabels(se, 
+                    column_name = "selection", 
+                    image_use = "raw",  
+                    pt_size = 5, 
+                    section_number = 2, 
+                    crop_area = c(0.45, 0.55, 0.65, 0.7)) &
   theme(plot.title = element_blank(), 
         plot.subtitle = element_blank(), 
         legend.position = "none")
 
 (p_global / p_GALT)
 ```
+
+<br>
+
+------------------------------------------------------------------------
+
+<details open>
+
+<summary>**Package version**</summary>
+
+-   `STUtility2`: `r packageVersion("STUtility2")`
+
+</details>
+
+<details>
+
+<summary>**Session info**</summary>
+
+```{r}
+sessionInfo()
+```
+
+</details>
+
+<br>
