Formatting, edit text and add correlation plots to cell ype mapping vignette

--- a/vignettes/cell_type_mapping_with_NNLS.rmd
+++ b/vignettes/cell_type_mapping_with_NNLS.rmd
@@ -1,5 +1,6 @@
 ---
 title: "Cell type mapping with NNLS"
+date: "Last compiled: `r format(Sys.time(), '%d %B %Y')`"
 output:
   html_document:
     code_folding: show
@@ -8,6 +9,10 @@ editor_options:
   chunk_output_type: inline
 ---
 
+Cell type mapping with SRT data refers to a set of methods which allows you to infer the quantity of cells from SRT expression profiles. `STUtility2` offers a quick method based on *Non-Negative Least Squares* to infer cell type proportions directly from Visium spot expression profiles. We utilize the NNLS method implemented in the [RcppML](https://github.com/zdebruine/RcppML) *v0.3.7* package available on CRAN: <https://cran.r-project.org/web/packages/RcppML/index.html>. Please ensure you have the correct version installed before proceeding with this tutorial.
+
+In this tutorial, we'll take a look at two examples. First, we have two tissue sections of a [mouse brain](#mbrain) and a single cell RNA-seq dataset from the Allen Brain Atlas. In the second example, we have a [mouse kidney](#mkidney) section and single cell RNA-seq data from the Tabula Muris Senis.
+
 ```{r, message=FALSE, warning=FALSE}
 library(STUtility2)
 library(tibble)
@@ -15,6 +20,7 @@ library(dplyr)
 if (!requireNamespace('TabulaMurisSenisData', quietly = TRUE)) {
   BiocManager::install("TabulaMurisSenisData")
 }
+
 library(TabulaMurisSenisData)
 library(SingleCellExperiment)
 library(Seurat)
@@ -23,13 +29,9 @@ library(patchwork)
 library(ggplot2)
 ```
 
-Cell type mapping with SRT data refers to a set of methods which allows you to infer the quantity of cells from SRT expression profiles. `STUtility2` offers a quick method based on Non-Negative Least Squares to infer cell type proportions directly from Visium spot expression profiles.
+## Mouse brain {#mbrain}
 
-In this tutorial, we'll take a look at two examples. First, we have two tissue sections of a mouse brain and a single cell RNA-seq dataset from the Allen Brain Atlas. In the second example, we have a mouse kidney section and single cell RNA-seq data from the Tabula Muris Senis.
-
-## Mouse brain
-
-For this tutorial, we will use a single-cell dataset from the Allen Brain Atlas. You can check the code chunk below or follow [this](https://www.dropbox.com/s/cuowvm4vrf65pvq/allen_cortex.rds?dl=1) link to download it manually.
+For this tutorial, we will use a single-cell data set from the Allen Brain Atlas. You can check the code chunk below or follow [this](https://www.dropbox.com/s/cuowvm4vrf65pvq/allen_cortex.rds?dl=1) link to download it manually.
 
 ```{r eval=FALSE}
 #| code-fold: true
@@ -51,7 +53,8 @@ dir.create(paste0(targetdir, "/visium"))
 
 # Download section 1
 dir.create(paste0(targetdir, "/visium/S1"))
-download.file(url = "https://cf.10xgenomics.com/samples/spatial-exp/1.0.0/V1_Mouse_Brain_Sagittal_Anterior/V1_Mouse_Brain_Sagittal_Anterior_filtered_feature_bc_matrix.h5", destfile = paste0(targetdir, "/visium/S1/filtered_feature_bc_matrix.h5"))
+download.file(url = "https://cf.10xgenomics.com/samples/spatial-exp/1.0.0/V1_Mouse_Brain_Sagittal_Anterior/V1_Mouse_Brain_Sagittal_Anterior_filtered_feature_bc_matrix.h5", 
+              destfile = paste0(targetdir, "/visium/S1/filtered_feature_bc_matrix.h5"))
 download.file(url = "https://cf.10xgenomics.com/samples/spatial-exp/1.0.0/V1_Mouse_Brain_Sagittal_Anterior/V1_Mouse_Brain_Sagittal_Anterior_spatial.tar.gz",
               destfile = paste0(targetdir, "/visium/S1/spatial.tar.gz"))
 untar(tarfile = paste0(targetdir, "/visium/S1/spatial.tar.gz"), 
@@ -60,7 +63,8 @@ file.remove(paste0(targetdir, "/visium/S1/spatial.tar.gz"))
 
 # Download section 2
 dir.create(paste0(targetdir, "/visium/S2"))
-download.file(url = "https://cf.10xgenomics.com/samples/spatial-exp/1.0.0/V1_Mouse_Brain_Sagittal_Posterior/V1_Mouse_Brain_Sagittal_Posterior_filtered_feature_bc_matrix.h5", destfile = paste0(targetdir, "/visium/S2/filtered_feature_bc_matrix.h5"))
+download.file(url = "https://cf.10xgenomics.com/samples/spatial-exp/1.0.0/V1_Mouse_Brain_Sagittal_Posterior/V1_Mouse_Brain_Sagittal_Posterior_filtered_feature_bc_matrix.h5", 
+              destfile = paste0(targetdir, "/visium/S2/filtered_feature_bc_matrix.h5"))
 download.file(url = "https://cf.10xgenomics.com/samples/spatial-exp/1.0.0/V1_Mouse_Brain_Sagittal_Posterior/V1_Mouse_Brain_Sagittal_Posterior_spatial.tar.gz",
               destfile = paste0(targetdir, "/visium/S2/spatial.tar.gz"))
 untar(tarfile = paste0(targetdir, "/visium/S2/spatial.tar.gz"), 
@@ -77,7 +81,8 @@ imgs <- Sys.glob("./mousebrain/visium/*/spatial/tissue_hires_image.png")
 spotfiles <- Sys.glob("./mousebrain/visium/*/spatial/tissue_positions_list.csv")
 json <- Sys.glob("./mousebrain/visium/*/spatial/scalefactors_json.json")
 
-infoTable <- tibble(samples, imgs, spotfiles, json, section_id = paste0("section_", 1:2))
+infoTable <- tibble(samples, imgs, spotfiles, json, 
+                    section_id = paste0("section_", 1:2))
 
 # Create Seurat object with 1 Sagittal Anterior section and 1 Sagittal Posterior section
 se_brain_spatial <- ReadVisiumData(infoTable)
@@ -139,7 +144,7 @@ DimPlot(se_allen, group.by = "subclass")
 
 ### Run NNLS
 
-The `RunNNLS` method requires a normalized `Seurat` object with 10x Visium data and a a normalized `Seurat` object with single-cell data. The `groups` argument defines where the cell type labels should be taken from in the single-cell `Seurat` object. In our single-cell `Seurat` object, the labels are stored in the "subclass" column.
+The `RunNNLS()` method requires a normalized `Seurat` object with 10x Visium data and a a normalized `Seurat` object with single-cell data. The `groups` argument defines where the cell type labels should be taken from in the single-cell `Seurat` object. In our single-cell `Seurat` object, the labels are stored in the "subclass" column.
 
 ```{r}
 DefaultAssay(se_brain_spatial) <- "Spatial"
@@ -195,123 +200,26 @@ plots <- lapply(seq_along(selected_celltypes), function(i) {
 }) |> setNames(nm = selected_celltypes)
 ```
 
-### Mouse brain cell types {.tabset}
+### Mapped mouse brain cell types {.tabset}
 
-#### L2/3 IT
-
-```{r}
-
-plots[[1]]
-
+```{r results='asis'}
+for(i in 1:length(selected_celltypes)){
+  cat("#### ", selected_celltypes[i],"\n")
+  print(plots[[i]])
+  cat("\n\n")
+}
 ```
 
-#### L4
-
-```{r}
-
-plots[[2]]
-
-```
-
-#### L5 IT
-
-```{r}
-
-plots[[3]]
-
-```
-
-#### L5 PT
-
-```{r}
-
-plots[[4]]
-
-```
-
-#### L6 CT
-
-```{r}
-
-plots[[5]]
-
-```
-
-#### L6 IT
-
-```{r}
-
-plots[[6]]
-
-```
-
-#### L6b
-
-```{r}
-
-plots[[7]]
-
-```
-
-#### Oligo
-
-```{r}
-
-plots[[8]]
-
-```
-
-#### Pvalb
-
-```{r}
-
-plots[[9]]
-
-```
-
-#### Meis2
-
-```{r}
-
-plots[[10]]
-
-```
-
-#### Astro
-
-```{r}
-
-plots[[11]]
-
-```
-
-#### VLMC
-
-```{r}
-
-plots[[12]]
-
-```
-
-#### SMC
-
-```{r}
-
-plots[[13]]
-
-```
 
 ### Visualize multiple cell types
 
-We can also visualize some of these cell types in one single plot with MapMultipleFeatures.
+We can also visualize some of these cell types in one single plot with `MapMultipleFeatures()`.
 
 ```{r message=FALSE, fig.asp=0.4, fig.width=10}
 
 # Load H&E images
 se_brain_spatial <- se_brain_spatial |> 
   LoadImages()
-
-# Generate colors
 
 # Plot multiple features
 MapMultipleFeatures(se_brain_spatial, 
@@ -324,7 +232,52 @@ MapMultipleFeatures(se_brain_spatial,
 
 ```
 
-## Mouse kidney
+
+### Cell type co-localization
+
+By computing the pair-wise correlation between cell types across spots, we can get an idea of which cell types often appear together in the same areas.
+
+```{r fig.asp=1, fig.width=4}
+cor_matrix <- FetchData(se_brain_spatial, selected_celltypes) |> cor()
+diag(cor_matrix) <- NA
+pheatmap::pheatmap(cor_matrix, 
+                   cellwidth = 14, cellheight = 14, 
+                   treeheight_col = 10, treeheight_row = 10, 
+                   main = "Cell type spatial correlation\nwithin spots")
+```
+<br>
+
+We can also use the predicted cell type proportions to compute factors using NMF, and thereby summarizing the cell types presence within the same location into a set of predefined factors. Each factor can be viewed as a niche of a certain cell type composition.
+
+```{r fig.asp=1, fig.width=4}
+nmf_data <- FetchData(se_brain_spatial, selected_celltypes) |> 
+  RcppML::nmf(k = 10, verbose = F)
+nmf_data <- nmf_data$w
+rownames(nmf_data) <- rownames(se_brain_spatial@meta.data)
+colnames(nmf_data) <- paste0("Factor_", 1:10)
+
+cor_df_factor <- bind_cols(FetchData(se_brain_spatial, selected_celltypes), nmf_data) |> 
+  cor() |>
+  data.frame() |> 
+  rownames_to_column(var = "Cell") |> 
+  filter(Cell %in% selected_celltypes) |> 
+  select( matches(c("Cell", paste0("Factor_", 1:10))) ) |> 
+  tidyr::pivot_longer(cols = paste0("Factor_", 1:10), 
+               names_to = "Factor", 
+               values_to = "cor")
+cor_df_factor$Factor <- factor(cor_df_factor$Factor, levels = paste0("Factor_", 1:10))
+
+ggplot(cor_df_factor, aes(x=Factor, y=Cell, size=abs(cor), color=cor)) +
+  geom_point() +
+  labs(title="Cell type ~ NMF factor\ncorrelation within spots", x="Factor", y = "Cell type") +
+  scale_colour_gradient2(high = ("darkorange"), mid = "white", low = ("steelblue"), midpoint = 0) +
+  theme_bw() +
+  theme(axis.text.x = element_text(angle=45, hjust=1))
+```
+
+
+
+## Mouse kidney {#mkidney}
 
 In the second example, we'll look at data from mouse kidney. We can obtain the single-cell data with the `TabulaMurisSenisData` R package from bioconductor. Let's load the data and create a `Seurat` object from it.
 
@@ -367,7 +320,7 @@ se_kidney_spatial <- ReadVisiumData(infoTable)
 
 ### Normalize data
 
-We apply the same normalization procedure to `se_kidney_spatial` and `se_kidney_singlecell` and run `FindVariableFeatures` to detect the top most variable genes.
+We apply the same normalization procedure to `se_kidney_spatial` and `se_kidney_singlecell` and run `FindVariableFeatures()` to detect the top most variable genes.
 
 ```{r eval=FALSE}
 
@@ -409,7 +362,7 @@ se_kidney_spatial <- readRDS("~/10x_data/R_objects/se_kidney_spatial")
 
 ### Run NNLS
 
-Again, the `RunNNLS` method requires a single-cell `Seurat` object and a 10x Visium `Seurat` object. The cell type annotations are stored in the "free_annotation" column.
+Again, the `RunNNLS()` method requires a single-cell `Seurat` object and a 10x Visium `Seurat` object. The cell type annotations are stored in the "free_annotation" column.
 
 ```{r}
   
@@ -450,79 +403,18 @@ plots <- lapply(seq_along(selected_celltypes), function(i) {
 
 ```
 
-### Kidney cell types {.tabset}
 
-#### kidney distal convoluted tubule epithelial cell
+### Mapped kidney cell types {.tabset}
 
-```{r}
-
-plots[[1]]
-
+```{r results='asis'}
+for(i in 1:length(selected_celltypes)){
+  cat("#### ", selected_celltypes[i], "\n")
+  cat("\n")
+  print(plots[[i]])
+  cat("\n\n")
+}
 ```
 
-#### brush cell
-
-```{r}
-
-plots[[2]]
-
-```
-
-#### kidney collecting duct principal cell
-
-```{r}
-
-plots[[3]]
-
-```
-
-#### podocyte
-
-```{r}
-
-plots[[4]]
-
-```
-
-#### proximal tube epithelial cell
-
-```{r}
-
-plots[[5]]
-
-```
-
-#### thick ascending tube S epithelial cell
-
-```{r}
-
-plots[[6]]
-
-```
-
-#### fenestrated capillary endothelial
-
-```{r}
-
-plots[[7]]
-
-```
-
-#### kidney capillary endothelial cell
-
-```{r}
-
-plots[[8]]
-
-```
-
-#### kidney mesangial cell
-
-```{r}
-
-plots[[9]]
-
-```
 
 ```{r eval=FALSE, include=FALSE}
 saveRDS(se_kidney_singlecell, file = "~/10x_data/R_objects/se_kidney_singlecell")
@@ -538,8 +430,6 @@ We can select some of these cell types and visualize them in one plot
 # Load H&E images
 se_kidney_spatial <- se_kidney_spatial |> 
   LoadImages()
-
-# Generate colors
 
 # Plot multiple features
 MapMultipleFeatures(se_kidney_spatial, 
@@ -580,3 +470,30 @@ p2 <- MapMultipleFeatures(se_kidney_spatial,
 p1 / p2
 
 ```
+
+<br>
+
+------------------------------------------------------------------------
+
+<details open>
+
+<summary>**Package versions**</summary>
+
+-   `STUtility2`: `r packageVersion("STUtility2")`
+
+-   `RcppML`: `r packageVersion("RcppML")`
+
+
+</details>
+
+<details>
+
+<summary>**Session info**</summary>
+
+```{r}
+sessionInfo()
+```
+
+</details>
+
+<br>
